opam-version: "2.0"
synopsis: "Initialise a local OCaml development environment"
description: """
opam-tools sets up a local project to have a working set of opam libraries
and development tools such as dune, odoc, ocamlformat and IDE helpers like
merlin and ocaml-lsp.  This is all made available by simply typing in `opam
tools` in your project directory."""
maintainer: ["anil@recoil.org"]
authors: ["Anil Madhavapeddy"]
license: "ISC"
homepage: "https://github.com/ocaml-opam/opam-tools"
bug-reports: "https://github.com/ocaml-opam/opam-tools/issues"
depends: [
  "dune" {>= "2.6"}
  "ocaml" {>= "4.07.0"}
]
dev-repo: "git+https://github.com/ocaml-opam/opam-tools.git"
build: [
  ["dune" "subst"] {pinned}
  [ "dune" "build" name "-j" jobs "@install" ]
]
flags: plugin
